--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 
     <header>
-      <h1>EL OSO POLAR DEL POLO SUR</h1>
-      <p>La venganza de los caidos</p>
+      <h1>Japon</h1>
+      <p>Tambien conocido como el pais del sol naciente</p>
     </header>
 
 
