--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
     <footer>
-      <p>EL OSO POLAR ESTABA VOLANDO POR LOS CIELOS CUANDO MIRO ASI POR DEBAJO DEL HOMBRO UN HELICOPERO CON CANTINFLAS DENTRO. FIN</p>
+      <p>YESHUA DAVID REYES GUZMAN DE 1ro DE SECUNDARIA</p>
     </footer>
 
 
