--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
     <header>
       <h1>Japon</h1>
-      <p>Tambien conocido como el pais del sol naciente</p>
+      <p>Tambien conocido como el pais del sol naciente es un pais ubicado al este asia una nacionj de principio'
+        feudal, donde la maxima representacion de poder era el emperador el cual tenia una funcion espiritual
+      </p>
     </header>
 
 
